Ass-1/getting_started/test_files/syntax_errors/MissingStatementAfterIf.cpm
class MissingStatementAfterIf {

  test(): boolean {
    if (true)
    // @error - syntax (missing statement after if)
  }

}

main() : int {
  print(MissingStatementAfterIf().test())
  return 0
}